--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for perl module Data::Kanji::Kanjidic
 
+0.12 2014-02-08
+
+* New export tag ':all'.
+
+0.11 2014-02-05
+
+* Rewrite documentation to reflect change in kanjidic_order.
+
 0.10 2013-11-29
 
 * "kanjidic_order" now sorts by JIS code ("jiscode" field).
