Update doc links. Allow chouon mark in kunyomi
Removed old download links & updated the edrdg/sljfaq.org links to the
current pages using WWW::LinkRot.

Current version of kanjidic didn't parse correctly due to やーど in
hiragana, added chouon to allowed kunyomi characters.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for perl module Data::Kanji::Kanjidic
 
+0.17 2021-03-11
+
+* Update links in documentation
+
 0.16 2018-10-05
 
 * Change api.metacpan.org links in documentation
